--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/germsch/proyecto-backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
+    "md5": "^2.3.0",
+    "mongoose": "^5.12.14",
     "nodemailer": "^6.6.1"
   }
 }
